# bsdiffDemo

./: README.md
bsdiffDemo/: settings.gradle
bsdiffDemo/app/: build.gradle
bsdiffDemo/app/src/main/: AndroidManifest.xml
bsdiffDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
bsdiffDemo/app/src/main/java/com/example/bsdiffdemo/: MainActivity.java
bsdiffDemo/app/src/main/res/layout/: activity_main.xml
bsdiffDemo/gradle/wrapper/: gradle-wrapper.properties
relatedFile/: patch
